Fixed bug #69299 (Regression in array_filter's $flag argument in PHP 7)